fixtures/python/fallback/should_fail/get_default.py
def read_timeout(config: dict) -> int:
    return config.get("timeout", 30)
